# NeuralNetworkLander

./: CMakeLists.txt  common.hpp  genann.c  genann.h  genetic_operations.cpp  genetic_operations.hpp  graphics.cpp  lander.cpp  lander.hpp  network.cpp  network.hpp  playfield.hpp  pong.cpp  pong.hpp
